AC_PREREQ(2.13)
AC_INIT(src/icbinn-fs.c)
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC

PKG_CHECK_MODULES([LIBV4V], [libv4v])
PKG_CHECK_MODULES([FUSE], [fuse])
PKG_CHECK_MODULES([LIBICBINN], [libicbinn])

PACKAGE=icbinn-fuse
VERSION=1.0.0

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)
AM_CONFIG_HEADER(config.h)
AM_PROG_CC_C_O

AC_OUTPUT([Makefile src/Makefile])
