dnl
dnl
dnl configure.in:
dnl
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/nowt.c)

AC_PROG_CC
AC_PROG_RANLIB
AC_SYS_LARGEFILE
AM_PROG_CC_C_O


LIBICBINN_RESOLVED_MAJOR_VERSION=1
LIBICBINN_RESOLVED_MINOR_VERSION=0
LIBICBINN_RESOLVED_MICRO_VERSION=0



LIBICBINN_RESOLVED_INTERFACE_VERSION_MIN=$LIBICBINN_RESOLVED_MINOR_VERSION
LIBICBINN_RESOLVED_INTERFACE_VERSION_MAX=$LIBICBINN_RESOLVED_MINOR_VERSION
LIBICBINN_RESOLVED_INTERFACE_REVISION=1

LIBICBINN_RESOLVED_VERSION=$LIBICBINN_RESOLVED_MAJOR_VERSION.$LIBICBINN_RESOLVED_MINOR_VERSION.$LIBICBINN_RESOLVED_MICRO_VERSION

AC_SUBST(LIBICBINN_RESOLVED_MAJOR_VERSION)
AC_SUBST(LIBICBINN_RESOLVED_MINOR_VERSION)
AC_SUBST(LIBICBINN_RESOLVED_MICRO_VERSION)
AC_SUBST(LIBICBINN_RESOLVED_VERSION)

AC_SUBST(LIBICBINN_RESOLVED_INTERFACE_VERSION_MIN)
AC_SUBST(LIBICBINN_RESOLVED_INTERFACE_VERSION_MAX)
AC_SUBST(LIBICBINN_RESOLVED_INTERFACE_REVISION)


LT_RELEASE=$LIBICBINN_RESOLVED_MAJOR_VERSION.$LIBICBINN_RESOLVED_MINOR_VERSION
LT_CURRENT=$LIBICBINN_RESOLVED_INTERFACE_VERSION_MAX
LT_REVISION=$LIBICBINN_RESOLVED_MICRO_VERSION
LT_AGE=`expr $LIBICBINN_RESOLVED_INTERFACE_VERSION_MAX - $LIBICBINN_RESOLVED_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBICBINN_RESOLVED_VERSION
PACKAGE=libicbinn_resolved

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

#AM_PROG_LIBTOOL

AM_CONFIG_HEADER(config.h)

AC_CHECK_PROG(SED,sed,sed)

dnl AC_DEFINE_UNQUOTED(LIBICBINN_RESOLVED_MAJOR_VERSION, $LIBICBINN_RESOLVED_MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBICBINN_RESOLVED_MINOR_VERSION, $LIBICBINN_RESOLVED_MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBICBINN_RESOLVED_MICRO_VERSION, $LIBICBINN_RESOLVED_MICRO_VERSION)

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_FUNCS(select strdup strstr)

I2_TM_H=$ac_cv_struct_tm

I2_HAVE_STDINT_H=0
I2_HAVE_SYS_INT_TYPES_H=0
if test "$ac_cv_header_sys_int_types_h" = "yes"; then
	I2_HAVE_SYS_INT_TYPES_H=1
fi
if test "$ac_cv_header_stdint_h" = "yes"; then
	I2_HAVE_STDINT_H=1
fi
I2_HAVE_UNISTD_H=0
if test "$ac_cv_header_unistd_h" = "yes"; then
	I2_HAVE_UNISTD_H=1
fi

AC_SUBST(I2_TM_H)
AC_SUBST(I2_HAVE_STDINT_H)
AC_SUBST(I2_HAVE_SYS_INT_TYPES_H)
AC_SUBST(I2_HAVE_UNISTD_H)

PKG_CHECK_MODULES([LIBICBINN],[libicbinn])
PKG_CHECK_MODULES([LIBTIRPC],[libtirpc])
PKG_CHECK_MODULES([LIBV4V],[libv4v])

AC_SUBST(RPCGEN_TEMPLATES)

AC_OUTPUT([Makefile 
	src/Makefile 
	libicbinn_resolved.pc.src])

